--- a/fbdl_converter.html
+++ b/fbdl_converter.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FBDL Konverter</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="codemirror.css">
-    <link rel="stylesheet" type="text/css" href="xq-light.css">
+    <title>FBDL Converter</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/codemirror.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/xq-light.css">
 </head>
 <body>
     <header>
@@ -63,9 +63,9 @@ end
         </form>       
     </main>
 
-    <script src="tokenizer.js"></script>
-    <script src="codemirror.js"></script>
-    <script src="ruby.js"></script>
-    <script src="converter.js"></script>
+    <script src="assets/js/tokenizer.js"></script>
+    <script src="assets/js/codemirror.js"></script>
+    <script src="assets/js/ruby.js"></script>
+    <script src="assets/js/converter.js"></script>
 </body>
 </html>
