Implemented solution for storing the rulebase data and modified output with additional supplementation

--- a/fbdl_converter.html
+++ b/fbdl_converter.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/codemirror.css">
     <link rel="stylesheet" href="assets/css/xq-light.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 </head>
 <body>
     <header>
@@ -63,8 +64,8 @@ end
                     <div id="outputSection">
                         <pre id="resultOutput"></pre>
                     </div>
-                </div>
-            </form>
+                </div>              
+            </form>            
         </section>
     </main>
     <footer>
@@ -75,5 +76,7 @@ end
     <script src="assets/js/codemirror.js"></script>
     <script src="assets/js/ruby.js"></script>
     <script src="assets/js/converter.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
 </body>
 </html>
