--- a/fbdl_converter.html
+++ b/fbdl_converter.html
@@ -64,7 +64,14 @@ end
                     <div id="outputSection">
                         <pre id="resultOutput"></pre>
                     </div>
-                </div>              
+                    <div id="simulation">
+                        <h2 style="margin-left: 20px;">Simulation</h2>
+                        <div id="bodies">
+                            <div id="sliders"></div>
+                            <div id="indicators"></div>
+                        </div>
+                    </div>
+                </div>          
             </form>            
         </section>
     </main>
@@ -72,11 +79,16 @@ end
         <p>&copy; 2024 FBDL Converter. Minden jog fenntartva.</p>
     </footer>
 
+    <script src="assets/js/engine.js"></script>
+    <script src="assets/js/parser.js"></script>
+    <script src="assets/js/simulator.js"></script>
     <script src="assets/js/tokenizer.js"></script>
+    <script src="assets/js/universe.js"></script>
     <script src="assets/js/codemirror.js"></script>
     <script src="assets/js/ruby.js"></script>
     <script src="assets/js/converter.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+
 </body>
 </html>
