--- a/fbdl_converter.html
+++ b/fbdl_converter.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FBDL Converter</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/codemirror.css">
-    <link rel="stylesheet" href="assets/css/xq-light.css">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FBDL Converter</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/codemirror.css">
+  <link rel="stylesheet" href="assets/css/xq-light.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 </head>
 <body>
-    <main id="converter">
-        <section>
-            <div class="fbdlIcon">
-                <img class="icon" src="assets/images/icon.png" alt="Icon">
-                <h1>FBDL Converter</h1>
-            </div>
-            <p>Fast and easy FBDL to C code conversion.</p>
-            <form id="fbdlForm">
-                <div id="converterSection">
-                    <div id="inputSection">
-                        <textarea id="codearea">
+  <main id="converter">
+    <section>
+      <div class="fbdlIcon">
+        <img class="icon" src="assets/images/icon.png" alt="Icon">
+        <h1>FBDL Converter</h1>
+      </div>
+      <p>Fast and easy FBDL to C code conversion.</p>
+
+      <form id="fbdlForm">
+        <div id="converterSection">
+          <div id="inputSection">
+            <textarea id="codearea">
 universe "distance"
     "close" 0 0
     "mid" 5 2
@@ -46,40 +47,49 @@ rulebase "speed"
         "high" when "distance" is "far" and "range" is "mid"
     end
 end
-                        </textarea>
-                    </div>
-                    <div class="buttonSection">
-                        <button type="submit" id="convertButton">Convert</button>
-                        <button type="button" id="copyButton">Copy</button>
-                    </div>
-                    <div id="outputSection">
-                        <pre id="resultOutput"></pre>
-                    </div>
-                    <div id="simulation">
-                        <h2 style="margin-left: 20px;">Simulation</h2>
-                        <div id="simulationSection">
-                            <div id="sliders"></div>
-                            <div id="indicators"></div>
-                        </div>
-                    </div>
-                </div>          
-            </form>            
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 FBDL Converter. Minden jog fenntartva.</p>
-    </footer>
+            </textarea>
+          </div>
 
-    <script src="assets/js/engine.js"></script>
-    <script src="assets/js/parser.js"></script>
-    <script src="assets/js/simulator.js"></script>
-    <script src="assets/js/tokenizer.js"></script>
-    <script src="assets/js/universe.js"></script>
-    <script src="assets/js/codemirror.js"></script>
-    <script src="assets/js/ruby.js"></script>
-    <script src="assets/js/converter.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+          <div class="buttonGroup">
+            <button type="submit">Convert</button>
+            <button type="button" id="copyButton">Copy</button>
+          </div>
 
+          <div id="outputSection">
+            <pre id="resultOutput"></pre>
+          </div>
+
+          <div id="simulation">
+            <h2 style="margin-left: 20px;">Simulation</h2>
+            <div id="simLayout">
+              <div id="sliders"></div>
+              <div id="indicators"></div>
+            </div>
+          </div>
+        </div>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+        © <span id="year"></span> FBDL Converter &middot;
+        <a href="https://github.com/20davo/FBDL-converter" target="_blank" rel="noopener" class="github-link">
+        <img src="assets/images/github-mark-white.png" alt="" aria-hidden="true" class="github-icon">GitHub
+        </a>
+    </p>
+  </footer>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+
+  <script src="assets/js/engine.js"></script>
+  <script src="assets/js/parser.js"></script>
+  <script src="assets/js/simulator.js"></script>
+  <script src="assets/js/tokenizer.js"></script>
+  <script src="assets/js/universe.js"></script>
+  <script src="assets/js/codemirror.js"></script>
+  <script src="assets/js/ruby.js"></script>
+  <script src="assets/js/converter.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
 </body>
 </html>
