--- a/fbdl_converter.html
+++ b/fbdl_converter.html
@@ -63,7 +63,7 @@ end
             <h2 style="margin-left: 20px;">Simulation</h2>
             <div class="simLayout">
               <div id="sliders"></div>
-              <div class="indicators"></div>
+              <div id="indicators"></div>
             </div>
           </div>
         </div>
